...
                backgroundColor: Colors.transparent,
                elevation: 0,
                items: [
                  const BottomNavigationBarItem(
                    icon: _NavIcon(icon: TTIcons.home),
                    activeIcon: _NavIcon(icon: TTIcons.homeFilled),
                    label: 'Feed',
                  ),
                  BottomNavigationBarItem(
                    icon: _NavIcon(
                      icon: TTIcons.messages,
                      iconKey: tutorialAnchors.messagesNavKey,
                    ),
                    activeIcon: const _NavIcon(icon: TTIcons.messagesFilled),
                    label: 'Messages',
                  ),
                  BottomNavigationBarItem(
                    icon: _NavIcon(
                      icon: TTIcons.profile,
                      iconKey: tutorialAnchors.profileNavKey,
                    ),
...
